<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/cnn"
            android:title="@string/bbc"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/cnn"
            android:title="@string/al_jazeera"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/cnn"
            android:title="@string/geo"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_cnn"
            android:icon="@drawable/cnn"
            android:title="@string/cnn"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_samma"
            android:icon="@drawable/cnn"
            android:title="@string/samma"
            android:menuCategory="secondary"/>
    </group>
    <item
        android:title="Sports"
        android:menuCategory="secondary">
        <menu>
            <item
                android:id="@+id/nav_ptvSports"
                android:icon="@drawable/cnn"
                android:title="@string/ptv_sports"
                android:menuCategory="secondary"/>

            <item
                android:id="@+id/nav_tenSport"
                android:icon="@drawable/cnn"
                android:title="@string/ten_sport"
                android:menuCategory="secondary"/>

        </menu>

    </item>
</menu>