<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.news_app.ui.home.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.news_app.ui.gallery.GalleryFragment"
        android:label="@string/al_jazeera"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.news_app.ui.slideshow.SlideshowFragment"
        android:label="@string/geo"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_cnn"
        android:name="com.example.news_app.Fragments.CNNFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_c_n_n" />
    <fragment
        android:id="@+id/nav_samma"
        android:name="com.example.news_app.Fragments.SammaFragment"
        android:label="@string/samma"
        tools:layout="@layout/fragment_samma" />
    <fragment
        android:id="@+id/nav_ptvSports"
        android:name="com.example.news_app.Fragments.PtvSportsFragment"
        android:label="@string/ptv_sports"
        tools:layout="@layout/fragment_ptv_sports" />
    <fragment
        android:id="@+id/nav_tenSport"
        android:name="com.example.news_app.Fragments.TenSportFragment"
        android:label="@string/ten_sport"
        tools:layout="@layout/fragment_ten_sport" />
</navigation>